# perceptual-video-dropper

./: .gitignore  Cargo.toml
crates/pv_client/: Cargo.toml
crates/pv_client/src/: client.rs  main.rs
crates/pv_core/: Cargo.toml
crates/pv_core/examples/: main.rs
crates/pv_core/src/: error.rs  lib.rs  network.rs  video.rs
crates/pv_server/: Cargo.toml
crates/pv_server/examples/: streaming_simulation.rs
crates/pv_server/src/: config.rs  error.rs  lib.rs  main.rs  network.rs  prelude.rs  server.rs
crates/pv_server/tests/: streaming_test.rs
