[workspace]
resolver = "2"
members = [ "crates/pv_client",
    "crates/pv_core", 
    "crates/pv_server",
    "crates/pv_client",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
log = "0.4"
env_logger = "0.11"
thiserror = { version = "2.0"}
bincode = { version = "2.0", features = ["derive"] }
quinn = "0.11"
