[package]
name = "pv_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
gstreamer = "0.23"
gstreamer-rtsp-server = "0.23"
derive_more = { version = "2.0", features = ["full"] }
