[package]
name = "pv_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
pv_core = { path = "../pv_core" }
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"
config = "0.15"
toml = "0.8"
